psao-artifact/data/runs/cluster-backup-2026-09-07/deployment-service-a.before-injection.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "7"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"name":"service-a-deployment","namespace":"default"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"service-a"}},"template":{"metadata":{"annotations":{"prometheus.io/path":"/metrics","prometheus.io/port":"9464","prometheus.io/scrape":"true"},"labels":{"app":"service-a"}},"spec":{"containers":[{"image":"service-a:psao-1","imagePullPolicy":"IfNotPresent","name":"service-a","ports":[{"containerPort":3000,"name": [...]
  creationTimestamp: "2025-11-17T16:55:54Z"
  generation: 7
  name: service-a-deployment
  namespace: default
  resourceVersion: "422829"
  uid: b432842e-a64e-421a-ba00-e0f634ee3eae
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: service-a
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2026-02-21T21:30:26+06:00"
        prometheus.io/path: /metrics
        prometheus.io/port: "9464"
        prometheus.io/scrape: "true"
      creationTimestamp: null
      labels:
        app: service-a
    spec:
      containers:
      - image: service-a:psao-1
        imagePullPolicy: IfNotPresent
        name: service-a
        ports:
        - containerPort: 3000
          name: http
          protocol: TCP
        - containerPort: 9464
          name: metrics
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2025-11-17T16:55:56Z"
    lastUpdateTime: "2025-11-17T16:55:56Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2025-11-17T16:55:54Z"
    lastUpdateTime: "2026-09-07T06:00:12Z"
    message: ReplicaSet "service-a-deployment-78466f6c6" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 7
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
